@startuml
interface IInterestRateStrategy {
    +CalculateInterest(decimal balance)
}

class LowInterestRateStrategy {
    +CalculateInterest(decimal balance)
}

class HighInterestRateStrategy {
    +CalculateInterest(decimal balance)
}

class SavingsAccount {
    -_interestRateStrategy: IInterestRateStrategy
    +SetPaymentStrategy(IInterestRateStrategy interestRateStrategy)
    +CalculateInterest(decimal balance)
}

SavingsAccount o-- IInterestRateStrategy
IInterestRateStrategy <|.. LowInterestRateStrategy
IInterestRateStrategy <|.. HighInterestRateStrategy

@enduml